Fixed animation overflow and nav links

--- a/style.css
+++ b/style.css
@@ -336,10 +336,6 @@ footer {
         margin: auto;
     }
 
-    #nav-button > span {
-        border: 3px solid #000;
-        border-radius: 30%
-    }
 
     .hide-nav {
         display: none;
